--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link href="css/TechPro_Main_Styles.css" rel="stylesheet" type="text/css" />
+<link href="css/contact.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -352,7 +353,16 @@
 
 </div>
 
+<div id="contact_container">
+</div> 
+<!--Start of contact button>-->
+<div id="contactbutton">
+	<button id="contact_button" >Contact Us</button>
+</div>
+<!--End of Contact Button-->
 </body>
 <script src="js/jquery.js"></script>
 <script src="js/TechPro_Scripts.js"></script>
+<script src="js/jquery.colorbox.js"></script>
+<script src="js/Contact.js"></script>
 </html>
