--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>TechPro Innovations</title>
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<!--<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">  -->
+<!--<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
 <link href="css/TechPro_Main_Styles.css" rel="stylesheet" type="text/css" />
 <link href="css/contact.css" rel="stylesheet" type="text/css" />
 </head>
